--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-feature
+        android:name="android.hardware.touchscreen"
+        android:required="false" />
+    <uses-feature
+        android:name="android.software.leanback"
+        android:required="true" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,12 +21,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ListViewExample"
         tools:targetApi="31">
-        <provider
-            android:name=".FunkoProvider"
-            android:authorities="belmont.funko"
-            android:enabled="true"
-            android:exported="true"></provider>
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -27,6 +30,25 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".NewFunko"
+            android:banner="@drawable/app_icon_your_company"
+            android:exported="true"
+            android:icon="@drawable/app_icon_your_company"
+            android:label="@string/title_activity_new_funko"
+            android:logo="@drawable/app_icon_your_company"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <provider
+            android:name=".FunkoProvider"
+            android:authorities="belmont.funko"
+            android:enabled="true"
+            android:exported="true" />
     </application>
 
 </manifest>
